gcc/testsuite/gcc.dg/noncompile/940112-1.c
double
f (int x)
{
  double e = 1;
  e = 1;
  return (e)
}	/* { dg-error "(parse|syntax) error" } */
